--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<properties>
 		<swagger-version>1.5.7</swagger-version>
 		<java-version>1.8</java-version>
+		<hsqldb-version>2.4.0</hsqldb-version>
 	</properties>
 
 	<dependencies>
@@ -60,6 +61,18 @@
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
 			<scope>test</scope>
+		</dependency>
+	
+    	<!--Adds support for spring data and JPA -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+ 	   <!-- hsql  -->
+         <!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
+		<dependency>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
 		</dependency>
 
 	</dependencies>
